--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,13 @@
   "dependencies": {
     "@material-ui/core": "^4.5.0",
     "react": "^16.10.1",
+    "react-awesome-slider": "^1.1.1",
+    "react-bnb-gallery": "^1.1.7",
     "react-dom": "^16.10.1",
+    "react-responsive-carousel": "^3.1.50",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "react-slideshow-image": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
